# AlgoStruDati

./: CMakeLists.txt
AlgoAlberi/: Makefile  alberi_binari.c
AlgoArray/: Makefile  ricerca  ricerca.c  sorts.c
AlgoListe/: Makefile  code.c  liste.c
Esercizi/: pila_int_rand.c
Esercizi/esercizio_array/: Makefile  esercizio_array.c
Esercizi/grafo_prova/: grafo_prova.c
Prove/: Makefile  coda_stringhe.c
Prove/07-06-2023/: Makefile  pile_rand_coeff.c
Prove/10-07-2023/: Makefile  bst_interi_file.c
Prove/array_dado/: Makefile  array_dado.c
Prove/array_file/: Makefile  array_file.c  dati.txt
Prove/array_rand/: Makefile  array_rand.c
Prove/bst_file/: Makefile  bst_file.c
Prove/bst_rand/: Makefile  bst_rand.c
Prove/bst_rand1/: Makefile  bst_rand.c
Prove/bst_rand2/: Makefile  bst_rand.c
Prove/coda_stringhe/: Makefile  coda_stringhe.c
Prove/coda_stringhe_file/: Makefile  coda_stringhe_file.c  dati.txt
Prove/coda_stringhe_rand/: Makefile  coda_stringhe_rand.c
Prove/code_rand/: Makefile  code_rand.c  dati.txt
Prove/pile_file/: Makefile  pile_file.c  stringhe.txt
Prove/pile_rand/: Makefile  pile_rand.c
Prove/pile_rand1/: Makefile  pile_rand.c
Prove/pile_rand_coeffn/: Makefile  pile_rand_coeffn.c
Prove/prova_mia/: Makefile  giacomo_rossi.c
Prove/simulazione_23-05-2023/: Makefile  min_max_coda.c
Prove/sortedlist_rand/: Makefile  sortedlist_rand.c
